- re-enabled old pipe output (using new module ompipe, built-in) after
  some problems with pipes (and especially in regard to xconsole) were
  discovered. Thanks to Michael Biebl for reporting the issues.
- bugfix: fixed problem that caused compilation on FreeBSD 9.0 to fail.
  bugtracker: http://bugzilla.adiscon.com/show_bug.cgi?id=181
  Thanks to Christiano for reporting.
- bugfix: comment char ('#') in literal terminated script parsing
  and thus could not be used.
  but tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=119
  [merged in from v3.22.2]
---------------------------------------------------------------------------
Version 4.6.0  [v4-stable] (rgerhards), 2010-02-24
***************************************************************************
* This is a new stable v4 version. It contains all fixes and enhancements *
* made during the 4.5.x phase as well as those listed below.              *
* Note: this version is scheduled to conclude the v4 development process. *
*       Do not expect any more new developments in v4. The focus is now   *
*       on v5 (what also means we have a single devel branch again).      *
*       ("development" means new feature development, bug fixes are of    *
*       course provided for v4-stable)                                    *
***************************************************************************
- improved testbench to contain samples for totally malformed messages
  which miss parts of the message content
- bugfix: some malformed messages could lead to a missing LF inside files
  or some other missing parts of the template content.
- bugfix: if a message ended immediately with a hostname, the hostname
  was mistakenly interpreted as TAG, and localhost be used as hostname
- bugfix: message without MSG part could case a segfault
  [backported from v5 commit 98d1ed504ec001728955a5bcd7916f64cd85f39f]
  This actually was a "recent" regression, but I did not realize that it